Configure production database using env vars
These are the environment variables that we can expect to use when
deploying to AWS.

The type, host, port and name env vars were added to our Terraform
scripts in https://github.com/Crown-Commercial-Service/CMpDevEnvironment/commit/5d5703ef7a2e202776066bbc5ec0e9e1f06b7d46

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,8 @@ test:
 #
 production:
   <<: *default
-  database: marketplace_production
-  username: marketplace
-  password: <%= ENV['MARKETPLACE_DATABASE_PASSWORD'] %>
+  host: <%= ENV['CCS_DEFAULT_DB_HOST'] %>
+  port: <%= ENV['CCS_DEFAULT_DB_PORT'] %>
+  database: <%= ENV['CCS_DEFAULT_DB_NAME'] %>
+  username: <%= ENV['CCS_DEFAULT_DB_USER'] %>
+  password: <%= ENV['CCS_DEFAULT_DB_PASSWORD'] %>
