Configure Travis CI
* Add basic configuration
* Make Rubocop ignore vendor/ (i.e. bundled gems on CI)
* Cache bundled gems between builds
* Set up the database in the test RAILS_ENV
* Install known version of Postgres and Postgis

Co-authored-by: Paul Battley <pbattley@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
         - 'db/schema.rb'
         - 'db/seeds.rb'
         - 'bin/**/*'
+        - 'vendor/**/*'
 
 Rails:
     Enabled: true
