--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -67,3 +67,7 @@ Metrics/BlockLength:
     Max: 40
     Exclude:
         - 'spec/**/*'
+
+RSpec/DescribeClass:
+    Exclude:
+        - 'spec/views/**/*'
