Capture branch contact name & email in import
We're obtaining the branch contact name & email from the first contact
on the imported branch data.

Co-authored-by: Ben Griffiths <bengriffiths@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -77,10 +77,12 @@ Capybara/FeatureMethods:
         - 'spec/features/**/*'
 
 RSpec/MultipleExpectations:
+    Max: 3
     Exclude:
         - 'spec/features/**/*'
 
 RSpec/ExampleLength:
+    Max: 10
     Exclude:
         - 'spec/features/**/*'
 
