Cache assets on Travis CI
This speeds up builds and reduces output noise.

The manifest is deleted at the end of the run. Every other file
generated by the asset pipeline is stable, but this one is different
every run, forcing an unnecessary (slow) cache save.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
   directories:
     - node_modules
     - /home/travis/.rvm/
+    - public/assets
 env:
   - RAILS_ENV=test
 services:
@@ -20,3 +21,4 @@ script:
   - bundle exec rake db:test:prepare
   - bundle exec rake assets:precompile
   - bundle exec rake
+  - rm public/assets/.sprockets-manifest-*.json
