Update Bundler before using it on Travis CI
The `bundle install` task is automatically run by Travis before the
`script` steps. Moving the `gem install` to `before_install` ensures
that all `bundle` commands run with the desired version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ addons:
   apt:
     packages:
       - postgresql-9.6-postgis-2.3
-script:
+before_install:
   - gem install --force --conservative -v 1.16.6 bundler
+script:
   - bundle exec rake db:test:prepare
   - bundle exec rake assets:precompile
   - bundle exec rake
