Add spec to ensure seed data can be loaded
And add telephone numbers to seed data to make it valid. The telephone
numbers come from Ofcom's numbers for drama[1].

[1]: https://www.ofcom.org.uk/phones-telecoms-and-internet/information-for-industry/numbering/numbers-for-drama

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,6 +70,7 @@ Metrics/BlockLength:
 
 RSpec/DescribeClass:
     Exclude:
+        - 'spec/models/db_seeds_spec.rb'
         - 'spec/views/**/*'
 
 Capybara/FeatureMethods:
