Use RuboCop to help remember the uuid table option
This adds a Migration/RequireUUIDPrimaryKeys cop that checks that the
option has been added to every create_table command.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,11 @@
 ---
-require: rubocop-rspec
+require:
+  - rubocop-rspec
+  - './lib/cop/all'
+
 AllCops:
     TargetRubyVersion: 2.5
     Exclude:
-        - 'db/migrate/**/*'
         - 'db/schema.rb'
         - 'db/seeds.rb'
         - 'bin/**/*'
