Enforce text over unlimited string column
There's no performance advantage or functional difference between text
and character varying (without limit) in PostgreSQL. As we're using text
elsewhere for unconstrained fields, let's enforce consistency.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -77,6 +77,10 @@ Migration/RequireUUIDPrimaryKeys:
     Include:
         - 'db/migrate/*.rb'
 
+Migration/RequireLimitOnString:
+    Include:
+        - 'db/migrate/*.rb'
+
 RSpec/DescribeClass:
     Exclude:
         - 'spec/models/db_seeds_spec.rb'
