No need to lint files under tmp directory
I noticed a load of exceptions being reported related to reading
bootsnap cache files when running rubocop with the --debug option. I can
only imagine this will've been slowing rubocop down, so it seems
sensible to exclude files in this directory.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,7 @@ AllCops:
         - 'db/seeds.rb'
         - 'bin/**/*'
         - 'vendor/**/*'
+        - 'tmp/**/*'
 
 Rails:
     Enabled: true
