--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "dependencies": {
     "govuk-frontend": "^2.0.0",
     "html5shiv": "^3.7.3"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
