--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "devDependencies": {
     "jest": "^23.6.0",
-    "jest-puppeteer": "^3.4.0"
+    "jest-puppeteer": "^3.4.0",
+    "puppeteer": "^1.9.0"
   },
   "scripts": {
     "test": "jest"
