--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "jest-puppeteer": "^3.4.0",
     "puppeteer": "^1.9.0"
   },
+  "jest": {
+    "verbose": true,
+    "preset": "jest-puppeteer"
+  },
   "scripts": {
     "test": "jest"
   }
