Generate the i18n-tasks rspec tests
As per the gem's README[1] I ran

   cp $(i18n-tasks gem-path)/templates/rspec/i18n_spec.rb spec/

I've temporarily disabled the three expectations as they fail
out-of-the-box. I will fix them separately in subsequent commits.

[1] https://github.com/glebm/i18n-tasks

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -86,6 +86,7 @@ RSpec/DescribeClass:
     Exclude:
         - 'spec/models/db_seeds_spec.rb'
         - 'spec/views/**/*'
+        - 'spec/i18n_spec.rb'
 
 Capybara/FeatureMethods:
     Exclude:
