Ensure locale file does not have unused keys
We consider keys under `errors.` to be used because they are referred
to indirectly in PostcodeValidator and LocationValidator and the
`i18n-tasks unused` cannot determine this by static analysis.

We make use of the Faker gem's localisation[1] in our factories so we
also consider all keys under `faker.` to be used.

[1] https://github.com/stympy/faker#customization

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -97,7 +97,9 @@ search:
 # - '{devise,simple_form}.*'
 
 ## Consider these keys used:
-# ignore_unused:
+ignore_unused:
+  - errors.*
+  - faker.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
