--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -100,6 +100,7 @@ search:
 ignore_unused:
   - errors.*
   - faker.*
+  - activemodel.errors.models.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
