Add a spell-checking RuboCop cop
Based on the work in progress code from
https://github.com/rubocop-hq/rubocop/blob/54bb9ce43d8afad7023c540d7bdb8008f65e7b29/lib/rubocop/cop/style/spelling.rb

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,6 +51,11 @@ Style/WordArray:
 Style/ClassAndModuleChildren:
     Enabled: false
 
+Style/Spelling:
+    Enabled: true
+    Exclude:
+        - 'lib/cop/**/*'
+
 Layout/TrailingBlankLines:
     Enabled: true
 
