Use explicit module definition to DRY up FM model specs
This diff is best viewed with the `--ignore-all-space ` option, because
of all the indentation changes.

Note that I decided to disable the Metrics/ModuleLength cop in all model
specs, because it doesn't seem like a very useful restriction.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -111,3 +111,7 @@ RSpec/ContextWording:
       - with
       - without
       - and
+
+Metrics/ModuleLength:
+    Exclude:
+        - 'spec/models/**/*'
