Allow deep nesting in journey specs only

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -108,6 +108,8 @@ RSpec/ExampleLength:
 
 RSpec/NestedGroups:
     Max: 4
+    Exclude:
+        - 'spec/**/journey_spec.rb'
 
 RSpec/ContextWording:
     Prefixes:
