Ignore RuboCop LineLength Cop in Rspec examples
The `IgnoredPatterns` option appears to have been added for exactly this
reason. See PR 3479[1] for more info.

This is a pre-emptive change that allows us to use longer test names in
a subsequent commit.

[1]: https://github.com/rubocop-hq/rubocop/issues/3479

Co-authored-by: Chris Lowis <chris.lowis@gofreerange.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -68,6 +68,8 @@ Metrics/AbcSize:
 
 Metrics/LineLength:
     Max: 120
+    IgnoredPatterns:
+        - 'it .* do$'
 
 Metrics/BlockLength:
     Max: 40
