Allow ST result steps to describe their inputs
Rather than attempting to be clever by looking at the whole graph, these
have the information that leads to them hard-coded.

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -101,6 +101,7 @@ ignore_unused:
   - errors.*
   - faker.*
   - activemodel.errors.models.*
+  - journey_step.supply_teachers.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
