Use i18n to format distances in miles

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -103,6 +103,7 @@ ignore_unused:
   - activemodel.errors.models.*
   - journey_step.supply_teachers.*
   - number.*
+  - miles.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
