Fix "1 result found" in ST results
After discussions, we have concluded that the large digit for "x results
found" wasn't a specific design choice, and that we can improve this by
using Rails's unit pluralisation everywhere along with consistent
formatting.

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -104,6 +104,7 @@ ignore_unused:
   - journey_step.supply_teachers.*
   - number.*
   - miles.*
+  - results.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
