Use units localisation for supplier counts

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -105,6 +105,7 @@ ignore_unused:
   - number.*
   - miles.*
   - results.*
+  - suppliers.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
