--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,5 @@ COGNITO_CLIENT_SECRET=
 COGNITO_USER_POOL_SITE=
 COGNITO_USER_POOL_ID=
 COGNITO_AWS_REGION=
+
+DFE_SIGNIN_WHITELISTED_EMAIL_ADDRESSES=dfe@example.com
