Use specific translation for postcode validation message
I'm hoping to remove all of the errors.messages (i.e. generic)
translation strings, because then I should be able to remove the custom
errors.format translation string which in turn will mean that the
default validation error messages will include the attribute name and
will read sensibly, e.g. "can't be blank" -> "Name can't be blank".

Note that I had to make some changes to the SupplyTeachers::Branch model
spec, but this is now consistent with other places where we are testing
validation messages.

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -101,6 +101,7 @@ ignore_unused:
   - errors.*
   - faker.*
   - activemodel.errors.models.*
+  - activerecord.errors.models.*
   - journey_step.supply_teachers.*
   - number.*
   - miles.*
