Ensure tests pass no matter what APP_HAS_UPLOAD_PRIVILEGES is set to
Ensures that in tests requiring it to be false, it is stubbed as false.
Also adds it to .env.development to make it easier to run the app without
setting too many environment variables.

--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,5 @@ COGNITO_USER_POOL_ID=
 COGNITO_AWS_REGION=
 
 DFE_SIGNIN_WHITELISTED_EMAIL_ADDRESSES=dfe@example.com
+
+APP_HAS_UPLOAD_PRIVILEGES=yes
