Add temp-to-perm feature for working fewer than 5 days
I've added `scenario` lines to the RuboCop config to avoid it
complaining about long example names in feature specs. I could've
probably also avoided it by using nested contexts but this was the
easiest option for now.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -71,6 +71,7 @@ Metrics/LineLength:
     IgnoredPatterns:
         - 'it .* do$'
         - 'context .* do$'
+        - 'scenario .* do$'
 
 Metrics/BlockLength:
     Max: 40
