(feature) Return requested branch details with calculations via AJAX

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -119,6 +119,7 @@ RSpec/NestedGroups:
     Max: 4
     Exclude:
         - 'spec/**/journey_spec.rb'
+        - 'spec/**/branches_controller_spec.rb'
 
 RSpec/ContextWording:
     Prefixes:
