Change text for suppliers found  results on supllier results page
Closes #MC47

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -107,6 +107,7 @@ ignore_unused:
   - miles.*
   - results.*
   - suppliers.*
+  - companies.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
