Add help_needed step for management consultancy service

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -108,6 +108,7 @@ ignore_unused:
   - results.*
   - suppliers.*
   - companies.*
+  - management_consultancy.journey.choose_help_needed.*
 # - 'activerecord.attributes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
