Moved file upload scripts to rails app. Also added an admin site where the CT team can upload data files
Removed tmp files

Added the upload folder to gitignore and uncommented the methods that runs the script

Script now runs on validate

Validation now works

Added approved action

Added aasm state machine

Cleaned up views and approve/reject methods

Added logic to revert changes on reject, cancel or when upload creation fails

Added some styling for new upload page

Uploads index page now has an accordion to show the list of upload sessions

Added date when upload session was created

Added file type and size validation

Added redis and sidekiq. Sidekiq log can only be accessed if user is logged in

Added failed_reason to admin uploads and set up rake task in a background process

Moved database update in a background process

Added tests for upload model

Updated scpecs

Added limit to migration and fixed anonymize.rb

Rubocop fixes

Uploader cleanup

Rubocop fixes

Removed uneeded model

Fixed merge conflict and tests

Excluded input and output folders from gitignore

Removed error.out files

Gitignore fix

Matched schema with master

Gitignore fix

Added cache attr accessors to permit params

Removed hardocded supplier names

Removed geocoder-cache

Gitignore update

Removed neutral vendor supplier details from script

Index page now matches designs

New screen now matches designs

Added show page with new designs

Govuk-frontend update and setup in_preview and uploading paths

FM bug fixing on long list page

Switched to version 2.4 of postgis

Added pagination and fixed tests

Added error messages on the show page

Small fixes

Removed errors.out file

Added the a .gitignore file in the input and output folders so the folders are checked into github

Revert "Feature/st 69 admin tool"

Moved file upload scripts to rails app. Also added an admin site where the CT team can upload data files

Removed tmp files

Added the upload folder to gitignore and uncomment

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
         - 'bin/**/*'
         - 'vendor/**/*'
         - 'tmp/**/*'
+        - 'lib/tasks/supply_teachers/**/*'
 
 Rails:
     Enabled: true
