--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ logfile
 /coverage/*
 .idea/
 /nbproject/private/
+
+# SupplyTeachers data folders
+uploads/*
+public/data/*
+public/uploads/*
+lib/tasks/supply_teachers/.geocoder-cache.yml
+
+# Redis dump
+dump.rdb
