--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -61,6 +61,15 @@
             "args": [
                 "db:static"
             ]
+        },
+        {
+            "name": "rake db:postcode",
+            "type": "Ruby",
+            "request": "launch",
+            "program": "~/.rvm/rubies/ruby-2.6.3/bin/rake",
+            "args": [
+                "db:postcode"
+            ]
         }
     ]
 }
