--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@ logfile
 /nbproject/private/
 
 # SupplyTeachers data folders
-!lib/tasks/supply_teachers/*
+!lib/tasks/supply_teachers/input/errors.out
+!lib/tasks/supply_teachers/output/errors.out
 lib/tasks/supply_teachers/input/Current_Accredited_Suppliers_.xlsx
 lib/tasks/supply_teachers/input/Geographical Data all suppliers.xlsx
 lib/tasks/supply_teachers/input/Lot_1_and_2_comparisons.xlsx
@@ -52,7 +53,6 @@ lib/tasks/supply_teachers/output/data_merged.json
 lib/tasks/supply_teachers/output/data_only_accredited.json
 lib/tasks/supply_teachers/output/data_with_line_numbers.json
 lib/tasks/supply_teachers/output/data_with_vendors.json
-lib/tasks/supply_teachers/output/errors.out
 lib/tasks/supply_teachers/output/supplier_accreditation.json
 lib/tasks/supply_teachers/output/supplier_branches.json
 lib/tasks/supply_teachers/output/supplier_pricing.json
