--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@ logfile
 /nbproject/private/
 
 # SupplyTeachers data folders
-!lib/tasks/supply_teachers/input/errors.out
-!lib/tasks/supply_teachers/output/errors.out
+!lib/tasks/supply_teachers/input/
+!lib/tasks/supply_teachers/output/
 lib/tasks/supply_teachers/input/Current_Accredited_Suppliers_.xlsx
 lib/tasks/supply_teachers/input/Geographical Data all suppliers.xlsx
 lib/tasks/supply_teachers/input/Lot_1_and_2_comparisons.xlsx
@@ -57,6 +57,7 @@ lib/tasks/supply_teachers/output/supplier_accreditation.json
 lib/tasks/supply_teachers/output/supplier_branches.json
 lib/tasks/supply_teachers/output/supplier_pricing.json
 lib/tasks/supply_teachers/output/supplier_vendor_pricing.json
+lib/tasks/supply_teachers/output/errors.out
 uploads/*
 public/data/*
 public/uploads/*
