added OpsGenie webhook

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,5 @@ script:
   - bundle exec rake assets:precompile
   - bundle exec rake
   - rm public/assets/.sprockets-manifest-*.json
+notifications:
+  webhooks: https://api.eu.opsgenie.com/v1/json/travisci?apiKey=430b3a4a-eeba-486e-9133-99083dde9787
